--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,8 @@
 [DEFAULT]
     url = http://www.cs.put.poznan.pl/mmachowiak/m30.txt
-    path = ./data/PCMaxMachowiak.txt
+    defaultFilename = PCMaxMachowiak.txt
+    dataDir = ./data/
+[GENERATOR]
+    minProcessLen = 5
+    maxProcessLen = 40
+    dataDir = ./data/
