--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,12 @@
 [DEFAULT]
-    url = http://www.cs.put.poznan.pl/mmachowiak/m30.txt
+    url = http://www.cs.put.poznan.pl/mmachowiak/instances/m50.txt
     defaultFilename = PCMaxMachowiak.txt
     dataDir = ./data/
 [GENERATOR]
     minProcessLen = 5
     maxProcessLen = 40
     dataDir = ./data/
+[TABUSEARCH]
+    generations = 100000
+    tabu_len = 100000
+    divider = 0.025
